// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decrement 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"count\\": 0,
+   \\"count\\": -1,
  }"
`;

exports[`increment 1`] = `
"Snapshot Diff:
- First value
+ Second value

  Object {
-   \\"count\\": 0,
+   \\"count\\": 1,
  }"
`;
